--- a/wrapper.conf
+++ b/wrapper.conf
@@ -13,24 +13,16 @@ wrapper.java.classpath.5=/usr/share/java/wrapper.jar
 # Java Library Path (location of Wrapper.DLL or libwrapper.so)
 wrapper.java.library.path.1=/usr/lib/jni
 
-# Java Bits.  On applicable platforms, tells the JVM to run in 32 or 64-bit mode.
+# Java Bits. On applicable platforms, tells the JVM to run in 32 or 64-bit mode.
 wrapper.java.additional.auto_bits=TRUE
 
 # Logfile location
 wrapper.logfile=/var/lib/basex/logs/wrapper.log
 
 # Java Additional Parameters
-# JVM settings
-# wrapper.java.additional.1=-server
-# wrapper.java.additional.2=-XX:MaxPermSize=256m
-# wrapper.java.additional.3=-Dprogram.name=run.sh
-# wrapper.java.additional.4=-Djava.endorsed.dirs=../lib/endorsed
-# wrapper.java.additional.5=-Dorg.jboss.resolver.warning=true
-# wrapper.java.additional.6=-Dsun.rmi.dgc.client.gcInterval=3600000
-# wrapper.java.additional.7=-Dsun.rmi.dgc.server.gcInterval=3600000
-# wrapper.java.additional.8=-Djava.net.preferIPv4Stack=true
-# wrapper.java.additional.9=-Dorg.tanukisoftware.wrapper.WrapperManager.mbean=false
 wrapper.java.additional.1=-Dorg.basex.path=/var/lib/basex
+wrapper.working.dir=/var/lib/basex
+
 # Initial Java Heap Size (in MB)
 wrapper.java.initmemory=1024
 
